# a-lame-mp3-encoder

./: .gitignore  CMakeLists.txt  Makefile  README.md
include/: directory.h  helper.h  mp3encoder.h  pthread_wrapper.h  wavdecoder.h
src/: batch-encoder.cpp  directory.cpp  encoder.cpp  helper.cpp  mp3encoder.cpp  wavdecoder.cpp
test_data/: .gitignore
